--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" 
-      content="width=device-width, initial-scale=10.0, maximum-scale=20.0, user-scalable=0">
+      content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1 user-scalable=0">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
